--- a/index.html
+++ b/index.html
@@ -1502,13 +1502,13 @@ ul {
     <div id="notification" class="notification"></div>
     
     <!-- JavaScript -->
-    <script src="./js/app.js"></script>
-    <script src="./js/time-tracker.js"></script>
-    <script src="./js/clients.js"></script>
-    <script src="./js/projects.js"></script>
-    <script src="./js/quotes.js"></script>
-    <script src="./js/invoices.js"></script>
-    <script src="./js/pdf-generator.js"></script>
-    <script src="./js/settings.js"></script>
+    <script src="./app.js"></script>
+    <script src="./time-tracker.js"></script>
+    <script src="./clients.js"></script>
+    <script src="./projects.js"></script>
+    <script src="./quotes.js"></script>
+    <script src="./invoices.js"></script>
+    <script src="./pdf-generator.js"></script>
+    <script src="./settings.js"></script>
 </body>
 </html>
