--- a/index.html
+++ b/index.html
@@ -1502,6 +1502,8 @@ ul {
     <div id="notification" class="notification"></div>
     
     <!-- JavaScript -->
+    <script src="license.js"></script>
+
     <script src="./app.js"></script>
     <script src="./time-tracker.js"></script>
     <script src="./clients.js"></script>
