--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+      <script defer src="https://cloud.umami.is/script.js" data-website-id="302cd0f7-976d-421f-8e7e-5fc3b9d60e60"></script>
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HourFlow Premium - Complete Freelancer Suite</title>
