--- a/index.html
+++ b/index.html
@@ -1564,6 +1564,7 @@ ul {
     <script src="./app.js"></script>
     <script src="./time-tracker.js"></script>
     <script src="./clients.js"></script>
+    <script src="./client-manager.js"></script>
     <script src="./projects.js"></script>
     <script src="./quotes.js"></script>
     <script src="./invoices.js"></script>
