--- a/license.html
+++ b/license.html
@@ -339,15 +339,30 @@ document.addEventListener('DOMContentLoaded', function() {
   }
 
   function acceptLicense(key) {
-    // SAVE both keys for verification
-    localStorage.setItem('hourflow_license', key);
-    localStorage.setItem('hourflow_verified_license', key);
+    try {
+      // SAVE both keys for verification
+      localStorage.setItem('hourflow_license', key);
+      localStorage.setItem('hourflow_verified_license', key);
 
-    showSuccess('License verified! Redirecting to app...');
+      // Double-check that the keys were saved correctly (important for incognito mode)
+      const savedLicense = localStorage.getItem('hourflow_license');
+      const savedVerified = localStorage.getItem('hourflow_verified_license');
+      
+      if (savedLicense !== key || savedVerified !== key) {
+        // This can happen in incognito mode or when localStorage is blocked
+        showError('Unable to save license information. Please disable incognito mode or enable cookies.');
+        return;
+      }
 
-    setTimeout(() => {
-      window.location.href = 'index.html';
-    }, 1000);
+      showSuccess('License verified! Redirecting to app...');
+
+      setTimeout(() => {
+        window.location.href = 'index.html';
+      }, 1000);
+    } catch (error) {
+      console.error('Error saving license:', error);
+      showError('Unable to save license information. Please disable incognito mode or enable cookies.');
+    }
   }
 });
 </script>
