--- a/index.html
+++ b/index.html
@@ -1726,6 +1726,7 @@ ul {
     
     <!-- JavaScript -->
     <script src="license.js"></script>
+    <script src="user-storage.js"></script>
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
